infrastructure/traefik/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
spec:
  #type: LoadBalancer
  type: ClusterIP
  #clusterIP: None  # headless service for statefulset
  selector:
    app: traefik
  ports:
  - name: traefik-dashboard
    port: 8080
    targetPort: dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-ingress
spec:
  type: LoadBalancer
  #clusterIP: None  # headless service for statefulset
  selector:
    app: traefik
  ports:
  - name: traefik-web
    port: 80
    targetPort: web
  - name: traefik-websecure
    port: 443
    targetPort: websecure
  - name: traefik-smtp
    port: 25
    targetPort: smtp
